encapsulated jsk api doc